--- a/palsunli/local_settings.py.dist
+++ b/palsunli/local_settings.py.dist
@@ -3,7 +3,15 @@ from settings import *
 DEBUG = True
 
 DATABASES['default']['ENGINE'] = 'django.db.backends.sqlite3'
-DATABASES['default']['NAME'] = os.path.join(PROJECT_DIR, 'test.db')
+DATABASES['default']['NAME'] = os.path.join(PROJECT_DIR, 'default.db')
+DATABASES['test'] = {
+    'ENGINE': 'django.db.backends.sqlite3', # Add 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
+    'NAME': os.path.join(PROJECT_DIR, 'test.db'),                      # Or path to database file if using sqlite3.
+    'USER': '',                      # Not used with sqlite3.
+    'PASSWORD': '',                  # Not used with sqlite3.
+    'HOST': '',                      # Set to empty string for localhost. Not used with sqlite3.
+    'PORT': '',                      # Set to empty string for default. Not used with sqlite3.
+}
 
 EMAIL_BACKEND = 'django.core.mail.backends.filebased.EmailBackend'
 EMAIL_FILE_PATH = 'emails.log'
